# RecSys-for-Voronka

./: pyproject.toml
EDA/: RecSys_EDA.ipynb
